# CG_Coursework2

./: README.md
RayTracer/: CMakeLists.txt  whitted.cp
RayTracer/core/: Camera.h  LightSource.cpp  LightSource.h  Material.cpp  Material.h  RayHitStructs.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h
RayTracer/examples/: example.json  testout.ppm
RayTracer/lights/: AreaLight.cpp  AreaLight.h  PointLight.cpp  PointLight.h
RayTracer/main/: main.cpp
RayTracer/materials/: BlinnPhong.cpp  BlinnPhong.h
RayTracer/shapes/: BVH.cpp  BVH.h  Planar_quad.cpp  Planar_quad.h  Sphere.cpp  Sphere.h  TriMesh.h  Triangle.cpp  Triangle.h
